--- a/hoot-client/src/App.css
+++ b/hoot-client/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  margin: 100px auto 0 auto;
+  max-width: 1200px;
+}
+
+.toolbar-container {
+  margin: auto;
+}
